JETcompiler/Tests/bad/bad018.myout
function "foo" expects 2 arguments, and 1 were provided, line 4.
